# IEECRSpace

./: .gitignore  IEECRSpace_Launcher.bat  IEECRSpace_Launcher.command  IEECRSpace_Launcher.sh  README.md  pyproject.toml  rspace.py  rspace_interface.py
Documentation/: README.md  examples.py
Installation/: create_package.py  finish_setup.py  install.bat  install.command  install.sh
src/: rspace.py  rspace_interface.py
